# sam

./: .env.example  .gitignore  README.md  agent.md  codex_log.md  docker-compose.yml
agents/: AGENT_BACKEND.md  AGENT_DEVOPS.md  AGENT_DOCS.md  AGENT_FRONTEND.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: collaborators.py  errors.py  health.py  missions.py  organizations.py  planning.py  roles.py  routes.py  shifts.py  sites.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  planning.py
backend/app/models/: collaborator.py  common.py  error.py  item.py  mission.py  organization.py  planning_pro.py  role.py  shift.py  site.py
backend/app/services/: collaborator_service.py  database.py  errors.py  item_service.py  mission_service.py  organization_service.py  pagination.py  planning_pro.py  registry.py  role_service.py  shift_service.py  site_service.py
backend/app/tests/: conftest.py  test_api_core.py  test_config.py  test_errors.py  test_health.py  test_items.py  test_planning_flows.py  test_planning_models.py  test_planning_pro_api.py  test_validation.py
backend/migrations/: env.py
backend/migrations/versions/: 202501070001_phase5_step02_planning_pro_foundations.py
docs/: INDEX.md  README.md  architecture.md  conventions.md  decisions.md  roadmap.md  specs_functionnelles.md  specs_techniques.md
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  (+2 more)
(+55 files in other folders)
