[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-backend"
version = "0.1.0"
description = "Enterprise starter FastAPI service"
authors = [{ name = "Codex", email = "codex@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.1.18",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "types-requests",
    "alembic>=1.13.2",
]

[tool.ruff]
line-length = 100
exclude = ["tests/"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "C4", "ARG", "SIM", "TID", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"app/tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
ignore_missing_imports = false
warn_unused_ignores = true
show_error_codes = true
mypy_path = "app"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["app"]
